--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ version '1.0'
 apply plugin: 'java'
 apply plugin: 'antlr'
 apply plugin: 'idea'
-
+//noinspection all
 sourceCompatibility = 1.8
 
 repositories {
